--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="./index.css" />
 
     <title>Frontend Mentor | Huddle landing page with curved sections</title>
   </head>
