--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img class="header-logo" src="/images/logo.svg" alt="logo" />
+        <img class="header-logo" src="./images/logo.svg" alt="logo" />
       </div>
       <div class="header-btn">
         <button>Try it free</button>
@@ -45,19 +45,19 @@
       </button>
       <img
         class="sec-community-img"
-        src="/images/screen-mockups.svg"
+        src="./images/screen-mockups.svg"
         alt="mockups"
       />
 
       <div class="community-members">
         <div class="community-details">
-          <img src="/images/icon-communities.svg" alt="icon-communities" />
+          <img src="./images/icon-communities.svg" alt="icon-communities" />
           <span class="community-no">1.4k+</span>
           <span class="community-text"> Communities Formed</span>
         </div>
 
         <div class="community-details">
-          <img src="/images/icon-messages.svg" alt="icon-message" />
+          <img src="./images/icon-messages.svg" alt="icon-message" />
           <span class="community-no"> 2.7m+</span>
           <span class="community-text"> Messages Sent</span>
         </div>
@@ -69,14 +69,14 @@
         <picture>
           <source
             media="(min-width:41rem)"
-            srcset="/images/bg-section-top-desktop-1.svg"
+            srcset="./images/bg-section-top-desktop-1.svg"
           />
           <source
             media="(max-width:41rem)"
-            srcset="/images/bg-section-top-mobile-1.svg"
+            srcset="./images/bg-section-top-mobile-1.svg"
           />
           <img
-            src="/images/bg-section-top-desktop-1.svg"
+            src="./images/bg-section-top-desktop-1.svg"
             alt="bg-img"
             style="width: 100%"
           />
@@ -95,7 +95,7 @@
 
         <div class="sec-grow-img">
           <img
-            src="/images/illustration-grow-together.svg"
+            src="./images/illustration-grow-together.svg"
             alt="grow-together"
           />
         </div>
@@ -105,14 +105,14 @@
         <picture>
           <source
             media="(min-width:41rem)"
-            srcset="/images/bg-section-bottom-desktop-1.svg"
+            srcset="./images/bg-section-bottom-desktop-1.svg"
           />
           <source
             media="(max-width:41rem)"
-            srcset="/images/bg-section-bottom-mobile-1.svg"
+            srcset="./images/bg-section-bottom-mobile-1.svg"
           />
           <img
-            src="/images/bg-section-bottom-desktop-1.svg"
+            src="./images/bg-section-bottom-desktop-1.svg"
             alt="bg-img"
             style="width: 100%"
           />
@@ -123,7 +123,7 @@
     <section class="sec-conversation">
       <div class="sec-conversation-img">
         <img
-          src="/images/illustration-flowing-conversation.svg"
+          src="./images/illustration-flowing-conversation.svg"
           alt="conversation"
         />
       </div>
@@ -142,14 +142,14 @@
         <picture>
           <source
             media="(min-width:41rem)"
-            srcset="/images/bg-section-top-desktop-2.svg"
+            srcset="./images/bg-section-top-desktop-2.svg"
           />
           <source
             media="(max-width:41rem)"
-            srcset="/images/bg-section-top-mobile-2.svg"
+            srcset="./images/bg-section-top-mobile-2.svg"
           />
           <img
-            src="/images/bg-section-top-desktop-2.svg"
+            src="./images/bg-section-top-desktop-2.svg"
             alt="bg-img"
             style="width: 100%"
           />
@@ -167,7 +167,7 @@
         </div>
 
         <div class="sec-user-img">
-          <img src="/images/illustration-your-users.svg" alt="users" />
+          <img src="./images/illustration-your-users.svg" alt="users" />
         </div>
       </div>
 
@@ -175,14 +175,14 @@
         <picture>
           <source
             media="(min-width:41rem)"
-            srcset="/images/bg-section-bottom-desktop-2.svg"
+            srcset="./images/bg-section-bottom-desktop-2.svg"
           />
           <source
             media="(max-width:41rem)"
-            srcset="/images/bg-section-bottom-mobile-2.svg"
+            srcset="./images/bg-section-bottom-mobile-2.svg"
           />
           <img
-            src="/images/bg-section-bottom-desktop-2.svg"
+            src="./images/bg-section-bottom-desktop-2.svg"
             alt="bg-img"
             style="width: 100%"
           />
@@ -200,14 +200,14 @@
         <picture>
           <source
             media="(min-width:41rem)"
-            srcset="/images/bg-footer-top-desktop.svg"
+            srcset="./images/bg-footer-top-desktop.svg"
           />
           <source
             media="(max-width:41rem)"
-            srcset="/images/bg-footer-top-mobile.svg"
+            srcset="./images/bg-footer-top-mobile.svg"
           />
           <img
-            src="/images/bg-footer-top-desktop.svg"
+            src="./images/bg-footer-top-desktop.svg"
             alt="bg-img"
             style="width: 100%"
           />
@@ -233,12 +233,12 @@
           </p>
 
           <div class="contact contact-no">
-            <img src="/images/icon-phone.svg" alt="icon-phone" />
+            <img src="./images/icon-phone.svg" alt="icon-phone" />
             <span>Phone: +1-543-123-4567</span>
           </div>
 
           <div class="contact contact-email">
-            <img src="/images/icon-email.svg" alt="icon-email" />
+            <img src="./images/icon-email.svg" alt="icon-email" />
             <span>example@huddle.com</span>
           </div>
 
